[fix] markdown img width overflow

--- a/src/pages/index/components/Qas/index.less
+++ b/src/pages/index/components/Qas/index.less
@@ -216,6 +216,10 @@
                   margin-bottom: 16px;
                   line-height: 1.8;
 
+                  img {
+                        max-width: 100%;
+                  }
+
                   code,
                   tt {
                         padding: .2em .4em;
